src/objects/pse__Jira_Work_Log__c.object
<CustomObject>
    <customHelpPage>pse__JiraWorkLogHelp</customHelpPage>
    <description>Stores work logs synced from Jira if the synchronization of Jira work logs with PSA timecards is enabled. The records are used to keep timecards created from Jira work logs up to date.</description>
    <fields>
        <fullName>pse__Comment__c</fullName>
        <description>Description of the work log from Jira.</description>
        <inlineHelpText>Description of the work log from Jira.</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>Work log started date from Jira.</description>
        <inlineHelpText>Work log started date from Jira.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Spent_Formatted__c</fullName>
        <description>Amount of time logged in Jira, displayed in a user-friendly format.</description>
        <inlineHelpText>Amount of time logged in Jira, displayed in a user-friendly format.</inlineHelpText>
        <label>Time Spent (Formatted)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Spent_Seconds__c</fullName>
        <description>Amount of time logged in Jira, in seconds.</description>
        <inlineHelpText>Amount of time logged in Jira, in seconds.</inlineHelpText>
        <label>Time Spent (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Timecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related timecard.</description>
        <inlineHelpText>Timecard that this work log is included in.</inlineHelpText>
        <label>Timecard</label>
        <referenceTo>pse__Timecard_Header__c</referenceTo>
        <relationshipLabel>Jira Work Logs</relationshipLabel>
        <relationshipName>Jira_Work_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Jira Work Log</label>
    <nameField>
        <label>Work Log ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Work Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>